--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         // Initialize LIFF
         function initializeLiff() {
             liff.init({
-                liffId: "YOUR_LIFF_ID" // แทนที่ด้วย LIFF ID ของคุณ
+                liffId: "2006214422-Kz3Rr06Y" // แทนที่ด้วย LIFF ID ของคุณ
             }).then(() => {
                 console.log('LIFF initialized');
             }).catch(err => {
