--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
                 <h2>อาหาร 1</h2>
                 <p>คำอธิบายสั้น ๆ ของอาหาร 1</p>
                 <div class="quantity-selector">
-                    <button class="quantity-button" onclick="updateQuantity('อาหาร 1', -1)">-</button>
+                    <button class="quantity-button" onclick="updateQuantity('ข้าวกะเพราหมูชิ้น', -1)">-</button>
                     <span id="quantity-อาหาร 1">0</span>
-                    <button class="quantity-button" onclick="updateQuantity('อาหาร 1', 1)">+</button>
+                    <button class="quantity-button" onclick="updateQuantity('ข้าวกะเพราหมูชิ้น', 1)">+</button>
                 </div>
             </div>
             <div class="food-item">
@@ -170,9 +170,9 @@
                 <h2>อาหาร 2</h2>
                 <p>คำอธิบายสั้น ๆ ของอาหาร 2</p>
                 <div class="quantity-selector">
-                    <button class="quantity-button" onclick="updateQuantity('อาหาร 2', -1)">-</button>
+                    <button class="quantity-button" onclick="updateQuantity('ข้าวหมูกรอบคั่วพริกเกลือ', -1)">-</button>
                     <span id="quantity-อาหาร 2">0</span>
-                    <button class="quantity-button" onclick="updateQuantity('อาหาร 2', 1)">+</button>
+                    <button class="quantity-button" onclick="updateQuantity('ข้าวหมูกรอบคั่วพริกเกลือ', 1)">+</button>
                 </div>
             </div>
             <!-- เพิ่มรายการอาหารเพิ่มเติมที่นี่ -->
@@ -237,7 +237,7 @@
             const orderSummary = [];
             for (let food in cart) {
                 if (cart[food] > 0) {
-                    orderSummary.push(`${food} x ${cart[food]}`);
+                    orderSummary.push(`${food}` จำนวน `${cart[food]}` ที่);
                 }
             }
 
