--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             const orderSummary = [];
             for (let food in cart) {
                 if (cart[food] > 0) {
-                    orderSummary.push(`${food}` จำนวน `${cart[food]}` ที่);
+                    orderSummary.push(`${food} จำนวน ${cart[food]} ที่`);
                 }
             }
 
